[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
name = "indexed_vec"
version = "1.2.1"
license = "MIT / Apache-2.0"
repository = "https://github.com/DiamondLovesYou/indexed_vec"
description = "`IndexVec` from `librustc_data_structures`"
edition = "2018"

[dependencies.serde]
optional = true
version = "1.0"
features = ["derive"]

[features]
default = ["serial"]
serial = [
    "serde",
]
